--- a/dbc_underflow/Gemfile
+++ b/dbc_underflow/Gemfile
@@ -31,6 +31,8 @@ gem 'capybara'
 gem 'shoulda-matchers'
 gem 'factory_girl'
 
+gem 'simplecov', :require => false, :group => :test
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
