--- a/dbc_underflow/Gemfile
+++ b/dbc_underflow/Gemfile
@@ -22,7 +22,7 @@ gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0',          group: :doc
-
+gem 'dotenv-rails', :groups => [:development, :test]
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 gem 'faker'
@@ -30,6 +30,7 @@ gem 'rspec-rails'
 gem 'capybara'
 gem 'shoulda-matchers'
 gem 'factory_girl'
+gem 'httparty'
 
 gem 'simplecov', :require => false, :group => :test
 
